--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mui": "^0.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.6.0"
   },
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-google-recaptcha": "^2.1.9",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
